# TransGPT

./: .gitignore  README.md  package-lock.json  package.json
docs/: README.md  README_zh.md
python/: .env.example  chat.py  main.py  pyproject.toml  requirements.txt
src/: App.jsx  HomePage.jsx  human2code.md
